--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     ],
     "rules": {
         "semi": "off",
-        "@typescript-eslint/semi": "warn"
+        "@typescript-eslint/semi": "warn",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
 }
