--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wp-lib-extra",
-	"version": "1.0.11",
+	"version": "1.0.12",
 	"description": "A function library for Wikipedia.",
 	"types": "./types/wp-lib-extra.d.ts",
 	"scripts": {
@@ -9,10 +9,13 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "wp-lib-extra"
+		"url": "git+https://github.com/Dr4goniez/wp-lib-extra.git"
+	},
+	"bugs": {
+		"url": "https://github.com/Dr4goniez/wp-lib-extra/issues"
 	},
 	"keywords": [
-		"wiki"
+		"wikipedia", "javascript", "typescript"
 	],
 	"author": "Dr4goniez",
 	"license": "CC-BY-SA-4.0",
