--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,5 +100,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/wp-lib-extra.ts", "./node_modules/types-mediawiki"]
+  "include": ["src/wp-lib-extra.ts", "./node_modules/types-mediawiki"],
+  "exclude": ["src/dummy.ts"]
 }
