--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "wp-lib-extra",
 	"version": "1.0.12",
 	"description": "A function library for Wikipedia.",
-	"types": "./index.d.ts",
+	"types": "./types/index.d.ts",
 	"scripts": {
 		"build": "tsc -p .",
 		"docs": "typedoc --options typedoc.json"
